--- a/package.json
+++ b/package.json
@@ -6,8 +6,24 @@
   "scripts": {
     "build": "webpack",
     "watch": "webpack --watch",
-    "serve": "webpack-dev-server --open",
+    "serve": "webpack-dev-server",
+    "tsc": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-router-dom": "^4.1.2"
+  },
+  "devDependencies": {
+    "@types/react": "^16.0.0",
+    "@types/react-dom": "^15.5.2",
+    "@types/react-router-dom": "^4.0.7",
+    "html-webpack-plugin": "^2.30.1",
+    "ts-loader": "^2.3.2",
+    "typescript": "^2.4.2",
+    "webpack": "^3.4.1",
+    "webpack-dev-server": "^2.6.1"
   },
   "repository": {
     "type": "git",
@@ -18,17 +34,5 @@
   "bugs": {
     "url": "https://github.com/MartinWebDev/JamesReactDemo/issues"
   },
-  "homepage": "https://github.com/MartinWebDev/JamesReactDemo#readme",
-  "devDependencies": {
-    "@types/react": "^16.0.0",
-    "@types/react-dom": "^15.5.2",
-    "ts-loader": "^2.3.2",
-    "typescript": "^2.4.2",
-    "webpack": "^3.4.1",
-    "webpack-dev-server": "^2.6.1"
-  },
-  "dependencies": {
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
-  }
+  "homepage": "https://github.com/MartinWebDev/JamesReactDemo#readme"
 }
