--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@types/react": "^16.0.0",
     "@types/react-dom": "^15.5.2",
     "@types/react-router-dom": "^4.0.7",
+    "css-loader": "^0.28.4",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.18.2",
     "ts-loader": "^2.3.2",
     "typescript": "^2.4.2",
     "webpack": "^3.4.1",
